# lastsign_philosophers

./: CMakeLists.txt
philo_one/: CMakeLists.txt  philo_one.c  philo_one.h  utils.c  utils_libft.c
philo_three/: philo_three.c  philo_three.h  philo_two.h  utils.c  utils_libft.c
philo_two/: philo_.c  philo_.h  philo_two.c  philo_two.h  utils_libft.c
